mOOL_parser.output
   0  $accept : %entry% $end

   1  input : class_main class_decl_list

   2  class_main : CLASS_KWORD CLASS_IDENTIFIER OBRACE method_main CBRACE

   3  class_decl : CLASS_KWORD CLASS_IDENTIFIER OBRACE var_decl_list method_decl_list CBRACE
   4             | CLASS_KWORD CLASS_IDENTIFIER EXTENDS_KWORD CLASS_IDENTIFIER OBRACE var_decl_list method_decl_list CBRACE

   5  class_decl_list :
   6                  | non_zero_class_decl_list

   7  non_zero_class_decl_list : class_decl
   8                           | non_zero_class_decl_list class_decl

   9  method_main : VOID_KWORD MAIN_KWORD OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE

  10  var_id_rule : VAR_IDENTIFIER

  11  method_decl : modifier type_KWORD var_id_rule OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE

  12  var_decl_list :
  13                | var_decl_list modifier type_KWORD var_id_rule SEMICOLON

  14  method_decl_list :
  15                   | non_zero_method_decl_list

  16  non_zero_method_decl_list : method_decl
  17                            | non_zero_method_decl_list method_decl

  18  modifier :
  19           | PRIVATE_KWORD

  20  type_KWORD : BOOL_KWORD
  21             | INT_KWORD
  22             | STRING_KWORD
  23             | VOID_KWORD
  24             | CLASS_IDENTIFIER

  25  mthd_param_list :
  26                  | non_zero_mthd_param_list

  27  non_zero_mthd_param_list : type_KWORD var_id_rule
  28                           | non_zero_mthd_param_list COMMA type_KWORD var_id_rule

  29  var_decl_stmt_list :
  30                     | non_zero_var_decl_stmt_list

  31  non_zero_var_decl_stmt_list : type_KWORD var_id_rule SEMICOLON
  32                              | non_zero_var_decl_stmt_list type_KWORD var_id_rule SEMICOLON

  33  stmt : RETURN_KWORD exp SEMICOLON
  34       | RETURN_KWORD SEMICOLON
  35       | IF_KWORD OPAREN exp CPAREN OBRACE non_zero_stmt_list CBRACE ELSE_KWORD OBRACE non_zero_stmt_list CBRACE
  36       | WHILE_KWORD OPAREN exp CPAREN OBRACE non_zero_stmt_list CBRACE
  37       | var_id_rule ASSIGN exp SEMICOLON
  38       | READ_KWORD OPAREN var_id_rule CPAREN SEMICOLON
  39       | PRINT_KWORD OPAREN exp CPAREN SEMICOLON
  40       | atom DOT var_id_rule ASSIGN exp SEMICOLON
  41       | atom OPAREN exp_list CPAREN SEMICOLON

  42  non_zero_stmt_list : stmt
  43                     | stmt non_zero_stmt_list

  44  exp : bexp
  45      | aexp
  46      | sexp

  47  bexp : bexp OR_CONDITION conj
  48       | conj

  49  conj : conj AND_CONDITION rexp
  50       | rexp

  51  rexp : aexp bop aexp
  52       | bgrd

  53  bop : LESS
  54      | GREATER
  55      | LESS_OR_EQUAL
  56      | GREATER_OR_EQUAL
  57      | EQUAL
  58      | NOT_EQUAL

  59  bgrd : NOT_CONDITION bgrd
  60       | TRUE_KWORD
  61       | FALSE_KWORD
  62       | atom

  63  aexp : aexp PLUS term
  64       | aexp MINUS term
  65       | term

  66  term : term MULTIPLY ftr
  67       | term DIVIDE ftr
  68       | ftr

  69  ftr : INTEGER_LITERAL
  70      | MINUS ftr
  71      | atom

  72  sexp : STRING_LITERAL
  73       | atom

  74  atom : atom DOT var_id_rule
  75       | THIS_KWORD
  76       | NULL_KWORD
  77       | SUPER_KWORD
  78       | var_id_rule
  79       | OPAREN exp CPAREN
  80       | OPAREN CLASS_IDENTIFIER CPAREN atom
  81       | NEW_KWORD CLASS_IDENTIFIER OPAREN CPAREN
  82       | atom OPAREN exp_list CPAREN

  83  exp_list :
  84           | non_zero_exp_list

  85  non_zero_exp_list : exp
  86                    | non_zero_exp_list COMMA exp

  87  %entry% : '\001' input

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . input  (87)

	CLASS_KWORD  shift 3
	.  error

	input  goto 4
	class_main  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	class_main : CLASS_KWORD . CLASS_IDENTIFIER OBRACE method_main CBRACE  (2)

	CLASS_IDENTIFIER  shift 6
	.  error


state 4
	%entry% : '\001' input .  (87)

	.  reduce 87


state 5
	input : class_main . class_decl_list  (1)
	class_decl_list : .  (5)

	CLASS_KWORD  shift 7
	$end  reduce 5

	class_decl_list  goto 8
	class_decl  goto 9
	non_zero_class_decl_list  goto 10


state 6
	class_main : CLASS_KWORD CLASS_IDENTIFIER . OBRACE method_main CBRACE  (2)

	OBRACE  shift 11
	.  error


state 7
	class_decl : CLASS_KWORD . CLASS_IDENTIFIER OBRACE var_decl_list method_decl_list CBRACE  (3)
	class_decl : CLASS_KWORD . CLASS_IDENTIFIER EXTENDS_KWORD CLASS_IDENTIFIER OBRACE var_decl_list method_decl_list CBRACE  (4)

	CLASS_IDENTIFIER  shift 12
	.  error


state 8
	input : class_main class_decl_list .  (1)

	.  reduce 1


state 9
	non_zero_class_decl_list : class_decl .  (7)

	.  reduce 7


state 10
	class_decl_list : non_zero_class_decl_list .  (6)
	non_zero_class_decl_list : non_zero_class_decl_list . class_decl  (8)

	CLASS_KWORD  shift 7
	$end  reduce 6

	class_decl  goto 13


state 11
	class_main : CLASS_KWORD CLASS_IDENTIFIER OBRACE . method_main CBRACE  (2)

	VOID_KWORD  shift 14
	.  error

	method_main  goto 15


state 12
	class_decl : CLASS_KWORD CLASS_IDENTIFIER . OBRACE var_decl_list method_decl_list CBRACE  (3)
	class_decl : CLASS_KWORD CLASS_IDENTIFIER . EXTENDS_KWORD CLASS_IDENTIFIER OBRACE var_decl_list method_decl_list CBRACE  (4)

	EXTENDS_KWORD  shift 16
	OBRACE  shift 17
	.  error


state 13
	non_zero_class_decl_list : non_zero_class_decl_list class_decl .  (8)

	.  reduce 8


state 14
	method_main : VOID_KWORD . MAIN_KWORD OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (9)

	MAIN_KWORD  shift 18
	.  error


state 15
	class_main : CLASS_KWORD CLASS_IDENTIFIER OBRACE method_main . CBRACE  (2)

	CBRACE  shift 19
	.  error


state 16
	class_decl : CLASS_KWORD CLASS_IDENTIFIER EXTENDS_KWORD . CLASS_IDENTIFIER OBRACE var_decl_list method_decl_list CBRACE  (4)

	CLASS_IDENTIFIER  shift 20
	.  error


state 17
	class_decl : CLASS_KWORD CLASS_IDENTIFIER OBRACE . var_decl_list method_decl_list CBRACE  (3)
	var_decl_list : .  (12)

	.  reduce 12

	var_decl_list  goto 21


state 18
	method_main : VOID_KWORD MAIN_KWORD . OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (9)

	OPAREN  shift 22
	.  error


state 19
	class_main : CLASS_KWORD CLASS_IDENTIFIER OBRACE method_main CBRACE .  (2)

	.  reduce 2


state 20
	class_decl : CLASS_KWORD CLASS_IDENTIFIER EXTENDS_KWORD CLASS_IDENTIFIER . OBRACE var_decl_list method_decl_list CBRACE  (4)

	OBRACE  shift 23
	.  error


state 21
	class_decl : CLASS_KWORD CLASS_IDENTIFIER OBRACE var_decl_list . method_decl_list CBRACE  (3)
	var_decl_list : var_decl_list . modifier type_KWORD var_id_rule SEMICOLON  (13)
	method_decl_list : .  (14)
	modifier : .  (18)

	PRIVATE_KWORD  shift 24
	INT_KWORD  reduce 18
	BOOL_KWORD  reduce 18
	STRING_KWORD  reduce 18
	VOID_KWORD  reduce 18
	CLASS_IDENTIFIER  reduce 18
	CBRACE  reduce 14

	method_decl_list  goto 25
	method_decl  goto 26
	modifier  goto 27
	non_zero_method_decl_list  goto 28


state 22
	method_main : VOID_KWORD MAIN_KWORD OPAREN . mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (9)
	mthd_param_list : .  (25)

	INT_KWORD  shift 29
	BOOL_KWORD  shift 30
	STRING_KWORD  shift 31
	VOID_KWORD  shift 32
	CLASS_IDENTIFIER  shift 33
	CPAREN  reduce 25

	mthd_param_list  goto 34
	type_KWORD  goto 35
	non_zero_mthd_param_list  goto 36


state 23
	class_decl : CLASS_KWORD CLASS_IDENTIFIER EXTENDS_KWORD CLASS_IDENTIFIER OBRACE . var_decl_list method_decl_list CBRACE  (4)
	var_decl_list : .  (12)

	.  reduce 12

	var_decl_list  goto 37


state 24
	modifier : PRIVATE_KWORD .  (19)

	.  reduce 19


state 25
	class_decl : CLASS_KWORD CLASS_IDENTIFIER OBRACE var_decl_list method_decl_list . CBRACE  (3)

	CBRACE  shift 38
	.  error


state 26
	non_zero_method_decl_list : method_decl .  (16)

	.  reduce 16


state 27
	method_decl : modifier . type_KWORD var_id_rule OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (11)
	var_decl_list : var_decl_list modifier . type_KWORD var_id_rule SEMICOLON  (13)

	INT_KWORD  shift 29
	BOOL_KWORD  shift 30
	STRING_KWORD  shift 31
	VOID_KWORD  shift 32
	CLASS_IDENTIFIER  shift 33
	.  error

	type_KWORD  goto 39


state 28
	method_decl_list : non_zero_method_decl_list .  (15)
	non_zero_method_decl_list : non_zero_method_decl_list . method_decl  (17)
	modifier : .  (18)

	PRIVATE_KWORD  shift 24
	INT_KWORD  reduce 18
	BOOL_KWORD  reduce 18
	STRING_KWORD  reduce 18
	VOID_KWORD  reduce 18
	CLASS_IDENTIFIER  reduce 18
	CBRACE  reduce 15

	method_decl  goto 40
	modifier  goto 41


state 29
	type_KWORD : INT_KWORD .  (21)

	.  reduce 21


state 30
	type_KWORD : BOOL_KWORD .  (20)

	.  reduce 20


state 31
	type_KWORD : STRING_KWORD .  (22)

	.  reduce 22


state 32
	type_KWORD : VOID_KWORD .  (23)

	.  reduce 23


state 33
	type_KWORD : CLASS_IDENTIFIER .  (24)

	.  reduce 24


state 34
	method_main : VOID_KWORD MAIN_KWORD OPAREN mthd_param_list . CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (9)

	CPAREN  shift 42
	.  error


state 35
	non_zero_mthd_param_list : type_KWORD . var_id_rule  (27)

	VAR_IDENTIFIER  shift 43
	.  error

	var_id_rule  goto 44


state 36
	mthd_param_list : non_zero_mthd_param_list .  (26)
	non_zero_mthd_param_list : non_zero_mthd_param_list . COMMA type_KWORD var_id_rule  (28)

	COMMA  shift 45
	CPAREN  reduce 26


state 37
	class_decl : CLASS_KWORD CLASS_IDENTIFIER EXTENDS_KWORD CLASS_IDENTIFIER OBRACE var_decl_list . method_decl_list CBRACE  (4)
	var_decl_list : var_decl_list . modifier type_KWORD var_id_rule SEMICOLON  (13)
	method_decl_list : .  (14)
	modifier : .  (18)

	PRIVATE_KWORD  shift 24
	INT_KWORD  reduce 18
	BOOL_KWORD  reduce 18
	STRING_KWORD  reduce 18
	VOID_KWORD  reduce 18
	CLASS_IDENTIFIER  reduce 18
	CBRACE  reduce 14

	method_decl_list  goto 46
	method_decl  goto 26
	modifier  goto 27
	non_zero_method_decl_list  goto 28


state 38
	class_decl : CLASS_KWORD CLASS_IDENTIFIER OBRACE var_decl_list method_decl_list CBRACE .  (3)

	.  reduce 3


state 39
	method_decl : modifier type_KWORD . var_id_rule OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (11)
	var_decl_list : var_decl_list modifier type_KWORD . var_id_rule SEMICOLON  (13)

	VAR_IDENTIFIER  shift 43
	.  error

	var_id_rule  goto 47


state 40
	non_zero_method_decl_list : non_zero_method_decl_list method_decl .  (17)

	.  reduce 17


state 41
	method_decl : modifier . type_KWORD var_id_rule OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (11)

	INT_KWORD  shift 29
	BOOL_KWORD  shift 30
	STRING_KWORD  shift 31
	VOID_KWORD  shift 32
	CLASS_IDENTIFIER  shift 33
	.  error

	type_KWORD  goto 48


state 42
	method_main : VOID_KWORD MAIN_KWORD OPAREN mthd_param_list CPAREN . OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (9)

	OBRACE  shift 49
	.  error


state 43
	var_id_rule : VAR_IDENTIFIER .  (10)

	.  reduce 10


state 44
	non_zero_mthd_param_list : type_KWORD var_id_rule .  (27)

	.  reduce 27


state 45
	non_zero_mthd_param_list : non_zero_mthd_param_list COMMA . type_KWORD var_id_rule  (28)

	INT_KWORD  shift 29
	BOOL_KWORD  shift 30
	STRING_KWORD  shift 31
	VOID_KWORD  shift 32
	CLASS_IDENTIFIER  shift 33
	.  error

	type_KWORD  goto 50


state 46
	class_decl : CLASS_KWORD CLASS_IDENTIFIER EXTENDS_KWORD CLASS_IDENTIFIER OBRACE var_decl_list method_decl_list . CBRACE  (4)

	CBRACE  shift 51
	.  error


state 47
	method_decl : modifier type_KWORD var_id_rule . OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (11)
	var_decl_list : var_decl_list modifier type_KWORD var_id_rule . SEMICOLON  (13)

	OPAREN  shift 52
	SEMICOLON  shift 53
	.  error


state 48
	method_decl : modifier type_KWORD . var_id_rule OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (11)

	VAR_IDENTIFIER  shift 43
	.  error

	var_id_rule  goto 54


state 49
	method_main : VOID_KWORD MAIN_KWORD OPAREN mthd_param_list CPAREN OBRACE . var_decl_stmt_list non_zero_stmt_list CBRACE  (9)
	var_decl_stmt_list : .  (29)

	INT_KWORD  shift 29
	BOOL_KWORD  shift 30
	STRING_KWORD  shift 31
	VOID_KWORD  shift 32
	CLASS_IDENTIFIER  shift 33
	WHILE_KWORD  reduce 29
	IF_KWORD  reduce 29
	RETURN_KWORD  reduce 29
	THIS_KWORD  reduce 29
	NULL_KWORD  reduce 29
	NEW_KWORD  reduce 29
	READ_KWORD  reduce 29
	PRINT_KWORD  reduce 29
	SUPER_KWORD  reduce 29
	VAR_IDENTIFIER  reduce 29
	OPAREN  reduce 29

	var_decl_stmt_list  goto 55
	type_KWORD  goto 56
	non_zero_var_decl_stmt_list  goto 57


state 50
	non_zero_mthd_param_list : non_zero_mthd_param_list COMMA type_KWORD . var_id_rule  (28)

	VAR_IDENTIFIER  shift 43
	.  error

	var_id_rule  goto 58


state 51
	class_decl : CLASS_KWORD CLASS_IDENTIFIER EXTENDS_KWORD CLASS_IDENTIFIER OBRACE var_decl_list method_decl_list CBRACE .  (4)

	.  reduce 4


state 52
	method_decl : modifier type_KWORD var_id_rule OPAREN . mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (11)
	mthd_param_list : .  (25)

	INT_KWORD  shift 29
	BOOL_KWORD  shift 30
	STRING_KWORD  shift 31
	VOID_KWORD  shift 32
	CLASS_IDENTIFIER  shift 33
	CPAREN  reduce 25

	mthd_param_list  goto 59
	type_KWORD  goto 35
	non_zero_mthd_param_list  goto 36


state 53
	var_decl_list : var_decl_list modifier type_KWORD var_id_rule SEMICOLON .  (13)

	.  reduce 13


state 54
	method_decl : modifier type_KWORD var_id_rule . OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (11)

	OPAREN  shift 52
	.  error


state 55
	method_main : VOID_KWORD MAIN_KWORD OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list . non_zero_stmt_list CBRACE  (9)

	WHILE_KWORD  shift 60
	IF_KWORD  shift 61
	RETURN_KWORD  shift 62
	THIS_KWORD  shift 63
	NULL_KWORD  shift 64
	NEW_KWORD  shift 65
	READ_KWORD  shift 66
	PRINT_KWORD  shift 67
	SUPER_KWORD  shift 68
	VAR_IDENTIFIER  shift 43
	OPAREN  shift 69
	.  error

	non_zero_stmt_list  goto 70
	var_id_rule  goto 71
	stmt  goto 72
	atom  goto 73


state 56
	non_zero_var_decl_stmt_list : type_KWORD . var_id_rule SEMICOLON  (31)

	VAR_IDENTIFIER  shift 43
	.  error

	var_id_rule  goto 74


state 57
	var_decl_stmt_list : non_zero_var_decl_stmt_list .  (30)
	non_zero_var_decl_stmt_list : non_zero_var_decl_stmt_list . type_KWORD var_id_rule SEMICOLON  (32)

	INT_KWORD  shift 29
	BOOL_KWORD  shift 30
	STRING_KWORD  shift 31
	VOID_KWORD  shift 32
	CLASS_IDENTIFIER  shift 33
	WHILE_KWORD  reduce 30
	IF_KWORD  reduce 30
	RETURN_KWORD  reduce 30
	THIS_KWORD  reduce 30
	NULL_KWORD  reduce 30
	NEW_KWORD  reduce 30
	READ_KWORD  reduce 30
	PRINT_KWORD  reduce 30
	SUPER_KWORD  reduce 30
	VAR_IDENTIFIER  reduce 30
	OPAREN  reduce 30

	type_KWORD  goto 75


state 58
	non_zero_mthd_param_list : non_zero_mthd_param_list COMMA type_KWORD var_id_rule .  (28)

	.  reduce 28


state 59
	method_decl : modifier type_KWORD var_id_rule OPAREN mthd_param_list . CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list CBRACE  (11)

	CPAREN  shift 76
	.  error


state 60
	stmt : WHILE_KWORD . OPAREN exp CPAREN OBRACE non_zero_stmt_list CBRACE  (36)

	OPAREN  shift 77
	.  error


state 61
	stmt : IF_KWORD . OPAREN exp CPAREN OBRACE non_zero_stmt_list CBRACE ELSE_KWORD OBRACE non_zero_stmt_list CBRACE  (35)

	OPAREN  shift 78
	.  error


state 62
	stmt : RETURN_KWORD . exp SEMICOLON  (33)
	stmt : RETURN_KWORD . SEMICOLON  (34)

	TRUE_KWORD  shift 79
	FALSE_KWORD  shift 80
	THIS_KWORD  shift 63
	NULL_KWORD  shift 64
	NEW_KWORD  shift 65
	SUPER_KWORD  shift 68
	INTEGER_LITERAL  shift 81
	STRING_LITERAL  shift 82
	VAR_IDENTIFIER  shift 43
	OPAREN  shift 69
	SEMICOLON  shift 83
	NOT_CONDITION  shift 84
	MINUS  shift 85
	.  error

	var_id_rule  goto 86
	exp  goto 87
	atom  goto 88
	bexp  goto 89
	aexp  goto 90
	sexp  goto 91
	conj  goto 92
	rexp  goto 93
	bgrd  goto 94
	term  goto 95
	ftr  goto 96


state 63
	atom : THIS_KWORD .  (75)

	.  reduce 75


state 64
	atom : NULL_KWORD .  (76)

	.  reduce 76


state 65
	atom : NEW_KWORD . CLASS_IDENTIFIER OPAREN CPAREN  (81)

	CLASS_IDENTIFIER  shift 97
	.  error


state 66
	stmt : READ_KWORD . OPAREN var_id_rule CPAREN SEMICOLON  (38)

	OPAREN  shift 98
	.  error


state 67
	stmt : PRINT_KWORD . OPAREN exp CPAREN SEMICOLON  (39)

	OPAREN  shift 99
	.  error


state 68
	atom : SUPER_KWORD .  (77)

	.  reduce 77


state 69
	atom : OPAREN . exp CPAREN  (79)
	atom : OPAREN . CLASS_IDENTIFIER CPAREN atom  (80)

	TRUE_KWORD  shift 79
	FALSE_KWORD  shift 80
	THIS_KWORD  shift 63
	NULL_KWORD  shift 64
	NEW_KWORD  shift 65
	SUPER_KWORD  shift 68
	INTEGER_LITERAL  shift 81
	STRING_LITERAL  shift 82
	VAR_IDENTIFIER  shift 43
	CLASS_IDENTIFIER  shift 100
	OPAREN  shift 69
	NOT_CONDITION  shift 84
	MINUS  shift 85
	.  error

	var_id_rule  goto 86
	exp  goto 101
	atom  goto 88
	bexp  goto 89
	aexp  goto 90
	sexp  goto 91
	conj  goto 92
	rexp  goto 93
	bgrd  goto 94
	term  goto 95
	ftr  goto 96


state 70
	method_main : VOID_KWORD MAIN_KWORD OPAREN mthd_param_list CPAREN OBRACE var_decl_stmt_list non_zero_stmt_list . CBRACE  (9)

	CBRACE  shift 102
	.  error


state 71
	stmt : var_id_rule . ASSIGN exp SEMICOLON  (37)
	atom : var_id_rule .  (78)

	ASSIGN  shift 103
	OPAREN  reduce 78
	DOT  reduce 78


state 72
	non_zero_stmt_list : stmt .  (42)
	non_zero_stmt_list : stmt . non_zero_stmt_list  (43)
